crates/ridl-backend-ts/src/snapshots/ridl_backend_ts__tests__result_union.snap
---
source: crates/ridl-backend-ts/src/tests.rs
expression: ts_for(decls)
---
/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0.0..250.0 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

export type Counter = number & { readonly __ridl: 'veh.common.Counter' };

export function initCounter(): Counter {
  return 0 as Counter;
}

export interface SensorReading {
  value: Speed;
}

export function initSensorReading(): SensorReading {
  return {
    value: initSpeed(),
  };
}

export interface SensorFault {
  code: Counter;
}

export function initSensorFault(): SensorFault {
  return {
    code: initCounter(),
  };
}

export type SensorResult =
  /**
   * Successful reading
   */
  | { kind: 'ok'; value: SensorReading }
  | { kind: 'err'; value: SensorFault };

export function initSensorResult(): SensorResult {
  return { kind: 'ok', value: initSensorReading() };
}
