crates/ridl-backend-ts/src/snapshots/ridl_backend_ts__tests__struct_with_optional_and_reserved.snap
---
source: crates/ridl-backend-ts/src/tests.rs
expression: source
---
/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0.0..250.0 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

export type Label = string & { readonly __ridl: 'veh.common.Label' };

export interface DriverProfile {
  name: Label;
  speed: Speed;
  override?: Speed;
}
