crates/ridl-backend-ts/src/snapshots/ridl_backend_ts__tests__tuple_field_becomes_inline_object_type.snap
---
source: crates/ridl-backend-ts/src/tests.rs
expression: source
---
/**
 * Vehicle speed over ground
 *
 * @unit km/h
 * @range [0.0..250.0 step 0.5]
 */
export type Speed = number & { readonly __ridl: 'veh.common.Speed' };

export function initSpeed(): Speed {
  return 0.0 as Speed;
}

export interface SensorBounds {
  range: { min: Speed; max: Speed };
}

export function initSensorBounds(): SensorBounds {
  return {
    range: { min: initSpeed(), max: initSpeed() },
  };
}
