crates/ridl-backend-ts/src/snapshots/ridl_backend_ts__tests__u64_width_brands_bigint.snap
---
source: crates/ridl-backend-ts/src/tests.rs
expression: source
---
/**
 * @range [0..18446744073709551615]
 */
export type Odometer = bigint & { readonly __ridl: 'veh.common.Odometer' };

export function initOdometer(): Odometer {
  return 0n as Odometer;
}
